fixed portfolio whitespace

--- a/styles/scss/_hamburger.scss
+++ b/styles/scss/_hamburger.scss
@@ -155,6 +155,7 @@
   #menu{
     flex-direction: column;
     text-align: center;
+    width: 410px;
   }
 
   #menu-toggle{
